# aiv

./: .gitignore  LICENSE  README.md  aiv  aiv.py  flake.nix  module.nix  package.nix  pyproject.toml
aiv/: __init__.py  api.py  cli.py  commands.py  common.py  completion.py  config.py  content.py  conversation.py  models.py  repl.py  specs.py
scripts/: aiv-extract-prompt
tests/: conftest.py  test_commands.py  test_content.py  test_conversation.py
