[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiv"
version = "1.3.0"
description = "AI Valve: Pipes for AI"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "prompt-toolkit",
    "rich",
    "filelock"
]

[project.scripts]
aiv = "aiv.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
